--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-merge": "^2.4.0",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
