--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@svgr/webpack": "^8.1.0",
-    "framer-motion": "^11.3.21",
+    "framer-motion": "^11.18.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.4.0",
+    "three": "^0.178.0",
     "tsparticles": "^3.8.1",
     "tsparticles-slim": "^2.12.0"
   },
