--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.18.2",
@@ -16,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
+    "resend": "^4.7.0",
     "tailwind-merge": "^2.4.0",
     "three": "^0.178.0",
     "tsparticles": "^3.8.1",
