--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
     "cSpell.words": [
         "LOPO",
         "LSTM",
+        "Muay",
         "NIRS",
+        "specialisation",
         "Tetrics",
+        "Tetris",
         "Turay"
     ]
 }
